--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.2.1",
+    "@solana/web3.js": "^1.98.0",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "prisma": "^6.2.1",
